fixed files name overflow

--- a/client/src/styles/components/auth/thirdStep.module.css
+++ b/client/src/styles/components/auth/thirdStep.module.css
@@ -42,9 +42,10 @@
 	font-weight: 600;
 	margin-left: auto;
 	margin-right: auto;
-	max-width: 200px;
-	text-overflow: ellipsis;
-	overflow: hidden;
+	max-width: 200px; /* Largeur maximale de l'élément parent */
+	white-space: nowrap; /* Empêche le texte de se retourner à la ligne */
+	overflow: hidden; /* Cache tout contenu dépassant des limites */
+	text-overflow: ellipsis; /* Ajoute des points de suspension (...) pour le texte dépassant */
 }
 
 .form .choices {
